unpackaged/main/default/objects/Product_Service__c/Product_Service__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <label>Product / Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>