unpackaged/main/default/objects/Product_Service__c/fields/CM_Link__c.field-meta.xml
<CustomField>
    <fullName>CM_Link__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp;  CM_Id__c  ,  CM_Name__c , &#39;_blank&#39;)</formula>
    <label>CM Link</label>
    <type>Text</type>
</CustomField>