unpackaged/main/default/objects/Product_Service__c/fields/CM_Name__c.field-meta.xml
<CustomField>
    <fullName>CM_Name__c</fullName>
    <label>CM Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>