unpackaged/main/default/objects/Product_Service__c/fields/CM_Object__c.field-meta.xml
<CustomField>
    <fullName>CM_Object__c</fullName>
    <label>CM Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>