unpackaged/main/default/objects/Product_Service__c/fields/CM_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>CM_Parent_ID__c</fullName>
    <label>CM Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>