unpackaged/main/default/objects/Product_Service__c/fields/CM_Structure__c.field-meta.xml
<CustomField>
    <fullName>CM_Structure__c</fullName>
    <label>CM Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>