unpackaged/main/default/objects/Product_Service__c/fields/Estimated_Lifetime_Revenue_Including_C__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lifetime_Revenue_Including_C__c</fullName>
    <label>Estimated Lifetime Revenue (w/ Child)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>