unpackaged/main/default/objects/Product_Service__c/fields/Last_Month_Revenue_Including_Child__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Revenue_Including_Child__c</fullName>
    <label>Last Month Revenue (Including Child)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>