unpackaged/main/default/objects/Product_Service__c/fields/Parent_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product / Service</label>
    <referenceTo>Product_Service__c</referenceTo>
    <relationshipName>Children_Products_Services</relationshipName>
    <type>Lookup</type>
</CustomField>