unpackaged/main/default/objects/Product_Service__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>