unpackaged/main/default/objects/Product_Service__c/fields/Revenue_Recalculation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recalculation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Recalculation Needed</label>
    <type>Checkbox</type>
</CustomField>