unpackaged/main/default/objects/Product_Service__c/fields/Total_Revenue_Including_Children__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Including_Children__c</fullName>
    <label>Total Revenue (Including Child)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>