unpackaged/main/default/objects/Product_Service__c/fields/Year_to_Date_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Revenue__c</fullName>
    <label>Year to Date Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>